# ICP-Point-Cloud-Aligner-Package

./: LICENSE
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/icp_transformator/: icp_transformator_core
devel/lib/pkgconfig/: icp_transformator.pc
devel/share/icp_transformator/cmake/: icp_transformatorConfig.cmake
src/icp_transformator/: CMakeLists.txt  LICENSE  package.xml
src/icp_transformator/config/: default.yaml
src/icp_transformator/include/icp_transformator/: icpTransformator.hpp
src/icp_transformator/launch/: icp_transformator.launch
src/icp_transformator/src/: IcpTransformator.cpp  icp_transformator_node.cpp
src/icp_transformator/test/: test_icp_transformator.cpp
